Add jvm arguments for better garbage collection